<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_do_imc"
        android:textAlignment="center"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:textSize="28sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_titulo"
        android:textAlignment="center"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:textSize="15sp"
        android:layout_marginTop="60sp"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="357dp"
        android:text="Digite seu peso:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="394dp"
        android:text="@string/digite_sua_altura_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edttext_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="136dp"
        android:hint="@string/ex_81kg"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:minHeight="48dp"
        tools:ignore="RelativeOverlap"
        android:autofillHints="" />

    <EditText

        android:id="@+id/edittext_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edttext_peso"
        android:layout_alignParentStart="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="-9dp"
        android:hint="@string/ex_1_74"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:minHeight="48dp"
        android:autofillHints="" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"

        android:layout_marginBottom="178dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/iconcalc"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="156dp"
        android:layout_height="93dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="43dp"
        android:text="@string/calcule" />
</RelativeLayout>